crates/surge-cli/tests/snapshots/migrate_spec_e2e__diamond.snap
---
source: crates/surge-cli/tests/migrate_spec_e2e.rs
expression: stdout
---
# Generated by `surge migrate-spec`. Review the file before running.
# Spec→flow mapping reference: docs/migrate-spec-to-flow.md

# Warnings raised during migration:
# - subtask s4 has 2 incoming edges; verify fan-in is intended

schema_version = 1
start = "s1"

[metadata]
name = "diamond"
description = "Diamond description"

[nodes.s1]
id = "s1"

[nodes.s1.position]
x = 0.0
y = 0.0

[[nodes.s1.declared_outcomes]]
id = "pass"
description = "Root passed"
edge_kind_hint = "forward"
is_terminal = false

[[nodes.s1.declared_outcomes]]
id = "fail"
description = "Root failed"
edge_kind_hint = "escalate"
is_terminal = false

[nodes.s1.config]
node_kind = "agent"
profile = "implementer@1.0"
bindings = []
hooks = []

[nodes.s1.config.limits]
timeout_seconds = 900
max_retries = 3
max_tokens = 200000

[nodes.s1.config.custom_fields]
complexity = "simple"

[nodes.s2]
id = "s2"

[nodes.s2.position]
x = 200.0
y = 0.0

[[nodes.s2.declared_outcomes]]
id = "pass"
description = "Left passed"
edge_kind_hint = "forward"
is_terminal = false

[[nodes.s2.declared_outcomes]]
id = "fail"
description = "Left failed"
edge_kind_hint = "escalate"
is_terminal = false

[nodes.s2.config]
node_kind = "agent"
profile = "implementer@1.0"
bindings = []
hooks = []

[nodes.s2.config.limits]
timeout_seconds = 900
max_retries = 3
max_tokens = 200000

[nodes.s2.config.custom_fields]
complexity = "simple"

[nodes.s3]
id = "s3"

[nodes.s3.position]
x = 400.0
y = 0.0

[[nodes.s3.declared_outcomes]]
id = "pass"
description = "Right passed"
edge_kind_hint = "forward"
is_terminal = false

[[nodes.s3.declared_outcomes]]
id = "fail"
description = "Right failed"
edge_kind_hint = "escalate"
is_terminal = false

[nodes.s3.config]
node_kind = "agent"
profile = "implementer@1.0"
bindings = []
hooks = []

[nodes.s3.config.limits]
timeout_seconds = 900
max_retries = 3
max_tokens = 200000

[nodes.s3.config.custom_fields]
complexity = "simple"

[nodes.s4]
id = "s4"

[nodes.s4.position]
x = 600.0
y = 0.0

[[nodes.s4.declared_outcomes]]
id = "pass"
description = "Merge passed"
edge_kind_hint = "forward"
is_terminal = false

[[nodes.s4.declared_outcomes]]
id = "fail"
description = "Merge failed"
edge_kind_hint = "escalate"
is_terminal = false

[nodes.s4.config]
node_kind = "agent"
profile = "implementer@1.0"
bindings = []
hooks = []

[nodes.s4.config.limits]
timeout_seconds = 900
max_retries = 3
max_tokens = 200000

[nodes.s4.config.custom_fields]
complexity = "simple"

[nodes.success]
id = "success"
declared_outcomes = []

[nodes.success.position]
x = 800.0
y = 0.0

[nodes.success.config]
node_kind = "terminal"

[nodes.success.config.kind]
type = "success"

[nodes.failure]
id = "failure"
declared_outcomes = []

[nodes.failure.position]
x = 800.0
y = 200.0

[nodes.failure.config]
node_kind = "terminal"

[nodes.failure.config.kind]
type = "failure"
exit_code = 1

[[edges]]
id = "e1_fail"
to = "failure"
kind = "forward"

[edges.from]
node = "s1"
outcome = "fail"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e2_pass"
to = "s2"
kind = "forward"

[edges.from]
node = "s1"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e3_fail"
to = "failure"
kind = "forward"

[edges.from]
node = "s2"
outcome = "fail"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e4_pass"
to = "s3"
kind = "forward"

[edges.from]
node = "s1"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e5_fail"
to = "failure"
kind = "forward"

[edges.from]
node = "s3"
outcome = "fail"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e6_pass"
to = "s4"
kind = "forward"

[edges.from]
node = "s2"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e7_pass"
to = "s4"
kind = "forward"

[edges.from]
node = "s3"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e8_fail"
to = "failure"
kind = "forward"

[edges.from]
node = "s4"
outcome = "fail"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e9_success"
to = "success"
kind = "forward"

[edges.from]
node = "s4"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"
