crates/surge-cli/tests/snapshots/migrate_spec_e2e__single.snap
---
source: crates/surge-cli/tests/migrate_spec_e2e.rs
expression: stdout
---
# Generated by `surge migrate-spec`. Review the file before running.
# Spec→flow mapping reference: docs/migrate-spec-to-flow.md

schema_version = 1
start = "s1"

[metadata]
name = "single"
description = "Single description"

[nodes.s1]
id = "s1"

[nodes.s1.position]
x = 0.0
y = 0.0

[[nodes.s1.declared_outcomes]]
id = "pass"
description = "Build passed"
edge_kind_hint = "forward"
is_terminal = false

[[nodes.s1.declared_outcomes]]
id = "fail"
description = "Build failed"
edge_kind_hint = "escalate"
is_terminal = false

[nodes.s1.config]
node_kind = "agent"
profile = "implementer@1.0"
bindings = []
hooks = []

[nodes.s1.config.limits]
timeout_seconds = 900
max_retries = 3
max_tokens = 200000

[nodes.s1.config.custom_fields]
complexity = "simple"

[nodes.success]
id = "success"
declared_outcomes = []

[nodes.success.position]
x = 200.0
y = 0.0

[nodes.success.config]
node_kind = "terminal"

[nodes.success.config.kind]
type = "success"

[nodes.failure]
id = "failure"
declared_outcomes = []

[nodes.failure.position]
x = 200.0
y = 200.0

[nodes.failure.config]
node_kind = "terminal"

[nodes.failure.config.kind]
type = "failure"
exit_code = 1

[[edges]]
id = "e1_fail"
to = "failure"
kind = "forward"

[edges.from]
node = "s1"
outcome = "fail"

[edges.policy]
on_max_exceeded = "escalate"

[[edges]]
id = "e2_success"
to = "success"
kind = "forward"

[edges.from]
node = "s1"
outcome = "pass"

[edges.policy]
on_max_exceeded = "escalate"
